--- a/app/src/main/res/layout/activity_health_ask.xml
+++ b/app/src/main/res/layout/activity_health_ask.xml
@@ -68,7 +68,8 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/dimen_10px"
                     android:layout_gravity="end"
-                    android:text="0/300"/>
+                    android:text="0/300"
+                    android:visibility="gone"/>
 
                 <View
                     android:layout_width="match_parent"
