--- a/app/src/main/res/layout/layout_search_record_item.xml
+++ b/app/src/main/res/layout/layout_search_record_item.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/dimen_10px">
+    android:padding="@dimen/dimen_10px"
+    android:id="@+id/rt_search_record">
 
     <com.app.aihealthapp.view.CircleImageView
         android:id="@+id/img_doctor_head"
