--- a/app/src/main/res/layout/fragement_home.xml
+++ b/app/src/main/res/layout/fragement_home.xml
@@ -394,7 +394,7 @@
                 android:layout_marginTop="@dimen/dimen_10px"
                 android:layout_marginBottom="@dimen/dimen_10px"
                 android:background="@color/white"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <TextView
                     android:layout_width="wrap_content"
