设备开关控制

--- a/app/src/main/res/layout/activity_authentication_user.xml
+++ b/app/src/main/res/layout/activity_authentication_user.xml
@@ -390,7 +390,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="@dimen/dimen_10px"
-                        android:text="支付宝付款码"
+                        android:text="付款码"
                         android:textColor="@color/text_color"
                         android:textSize="@dimen/text_14px"/>
 
