--- a/app/src/main/res/layout/activity_mine_device.xml
+++ b/app/src/main/res/layout/activity_mine_device.xml
@@ -71,13 +71,13 @@
                         android:text="来电通知"
                         android:textSize="@dimen/text_14px"
                         android:textColor="@color/text_color"/>
-                    <CheckBox
+                    <ImageView
                         android:id="@+id/check_open_phone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:button="@drawable/device_checkbox"/>
+                        android:background="@mipmap/car_off"/>
                 </RelativeLayout>
                 <View
                     android:layout_width="match_parent"
@@ -95,37 +95,14 @@
                         android:text="短信通知"
                         android:textSize="@dimen/text_14px"
                         android:textColor="@color/text_color"/>
-                    <CheckBox
+
+                    <ImageView
                         android:id="@+id/check_open_sms"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:button="@drawable/device_checkbox"/>
-                </RelativeLayout>
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@color/view_line"/>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/dimen_16px"
-                    >
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="微信通知"
-                        android:textSize="@dimen/text_14px"
-                        android:textColor="@color/text_color"/>
-
-                    <CheckBox
-                        android:id="@+id/check_open_qq"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:button="@drawable/device_checkbox" />
+                        android:background="@mipmap/car_off"/>
                 </RelativeLayout>
                 <View
                     android:layout_width="match_parent"
@@ -143,13 +120,39 @@
                         android:text="QQ通知"
                         android:textSize="@dimen/text_14px"
                         android:textColor="@color/text_color"/>
-                    <CheckBox
+                    <ImageView
+                        android:id="@+id/check_open_qq"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:background="@mipmap/car_off"/>
+
+                </RelativeLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/view_line"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/dimen_16px"
+                    >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="微信通知"
+                        android:textSize="@dimen/text_14px"
+                        android:textColor="@color/text_color"/>
+                    <ImageView
                         android:id="@+id/check_open_wx"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:button="@drawable/device_checkbox"/>
+                        android:background="@mipmap/car_off"/>
+
                 </RelativeLayout>
                 <View
                     android:layout_width="match_parent"
@@ -167,27 +170,15 @@
                         android:text="拍照控制"
                         android:textSize="@dimen/text_14px"
                         android:textColor="@color/text_color"/>
-                    <CheckBox
+                    <ImageView
                         android:id="@+id/check_open_photo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:button="@drawable/device_checkbox"/>
+                        android:background="@mipmap/car_off"/>
                 </RelativeLayout>
-
-
             </LinearLayout>
-          <!--  <Button
-                android:id="@+id/btn_unbind"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dimen_40px"
-                android:background="@drawable/frame_blue_true"
-                android:text="解绑"
-                android:textSize="@dimen/text_14px"
-                android:textColor="@color/white"
-                android:layout_margin="@dimen/dimen_16px"
-                android:visibility="gone"/>-->
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
