--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,10 +89,10 @@
         android:layout_marginLeft="@dimen/dimen_32px"
         android:layout_marginTop="@dimen/dimen_10px">
         <TextView
+            android:id="@+id/tv_forget_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/dimen_10px"
-
             android:text="忘记密码？"
             android:textSize="@dimen/text_14px"
             android:textColor="@color/default_text_color"/>
