--- a/app/src/main/res/layout/acty_splash.xml
+++ b/app/src/main/res/layout/acty_splash.xml
@@ -3,13 +3,7 @@
     android:id="@+id/rl_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:fitsSystemWindows="true"
+    android:background="@mipmap/wecome"
     >
-
-    <ImageView
-        android:layout_width="@dimen/dimen_100px"
-        android:layout_height="@dimen/dimen_100px"
-        android:background="@mipmap/logo"
-        android:layout_gravity="center"/>
 </FrameLayout>
