--- a/app/src/main/res/layout/layout_interrogation_record_item.xml
+++ b/app/src/main/res/layout/layout_interrogation_record_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/dimen_10px"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <com.app.aihealthapp.view.CircleImageView
             android:id="@+id/img_doctor_head"
@@ -36,31 +36,17 @@
                 android:textColor="@color/text_color"
                 android:textSize="@dimen/text_14px" />
 
-            <LinearLayout
+
+            <TextView
+                android:id="@+id/tv_doctor_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_8px"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="咨询问题:"
-                    android:textColor="@color/text_color"
-                    android:textSize="@dimen/text_14px" />
-
-                <TextView
-                    android:id="@+id/tv_doctor_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dimen_8px"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:text="小腹时常通小腹时常通小腹时常通小腹时常通"
-                    android:textColor="@color/default_hint_color"
-                    android:textSize="@dimen/text_12px" />
-            </LinearLayout>
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="小腹时常通小腹时常通小腹时常通小腹时常通"
+                android:textColor="@color/default_hint_color"
+                android:textSize="@dimen/text_12px" />
 
         </LinearLayout>
 
@@ -72,7 +58,8 @@
         android:layout_height="@dimen/dimen_60px"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:padding="@dimen/dimen_16px">
+        android:padding="@dimen/dimen_16px"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_reply"
