--- a/app/src/main/res/layout/acty_splash.xml
+++ b/app/src/main/res/layout/acty_splash.xml
@@ -3,7 +3,13 @@
     android:id="@+id/rl_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:background="@mipmap/wecome"
     >
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@mipmap/wecome"
+        android:fitsSystemWindows="true"
+
+        />
 </FrameLayout>
